# junta

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  README.md  app.py  database.py  index.html  pyproject.toml  requirements.txt
.github/workflows/: actions.yml
