[tool.poetry]
name = "junta"
version = "0.1.0"
description = "Web App to help make group decisions"
authors = ["Ryan Freckleton <ryan.freckleton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pylint = "^2.15.6"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
